add the relations query to the menu
