# controller/menu.controller.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 	"security-go/entity"
 	"security-go/service"
+	"security-go/util"
 )
 
 type MenuController struct {
@@ -34,11 +35,32 @@ func (ctrl *MenuController) CreateMenu(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	
+
 	if err := ctrl.MenuService.CreateMenu(&menu); err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
 	c.JSON(http.StatusCreated, menu)
+}
+
+// GetMenuById   obtiene un menu por su ID
+// @Summary      Obtener un menu por ID
+// @Description  Este endpoint devuelve la información de un menu específico dado su ID.
+// @Tags         menus
+// @Accept       json
+// @Produce      json
+// @Param        id  path      uint  true  "ID del menu"
+// @Success      200 {object}  entity.Menu   "menu encontrado"
+// @Router       /medfri-security/menu/{id} [get]
+func (ctrl *MenuController) GetMenuById(c *gin.Context) {
+	id, err := util.StringToUint(c.Param("id"))
+
+	menu, err := ctrl.MenuService.FindById(id)
+	if err != nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": "Menu not found"})
+		return
+	}
+
+	c.JSON(http.StatusOK, menu)
 }
