# entity/menu.entity.go
@@ -5,14 +5,14 @@ func (Menu) TableName() string {
 }
 
 type Menu struct {
-	MenuID uint   `gorm:"primaryKey;autoIncrement;column:menu_id"`
-	Nombre string `gorm:"column:nombre" json:"nombre"`
-	//ItemPadreId *uint  `gorm:"column:item_padre_id" json:"item_padre_id,omitempty"`
+	MenuID      uint   `gorm:"primaryKey;autoIncrement;column:menu_id"`
+	Nombre      string `gorm:"column:nombre" json:"nombre"`
+	MenuPadreID *uint  `gorm:"column:menu_padre_id" json:"menu_padre_id,omitempty"`
 	RecursoID   *uint  `gorm:"column:recurso_id" json:"recurso_id,omitempty"`
 	EntidadID   *uint  `gorm:"column:entidad_id" json:"entidad_id,omitempty"`
 	Descripcion string `gorm:"column:descripcion" json:"descripcion"`
 
-	//ItemPadre *Menu     `gorm:"foreignKey:ItemPadreID;references:ItemID" json:"item_padre,omitempty"`
-	Recurso *Resource `gorm:"foreignKey:RecursoID" json:"recurso,omitempty"`
-	Entidad *Entity   `gorm:"foreignKey:EntidadID" json:"entidad,omitempty"`
+	MenuPadre *Menu     `gorm:"foreignKey:MenuPadreID;references:MenuID" json:"menu_padre,omitempty"`
+	Recurso   *Resource `gorm:"foreignKey:RecursoID" json:"recurso,omitempty"`
+	Entidad   *Entity   `gorm:"foreignKey:EntidadID" json:"entidad,omitempty"`
 }
